# yew-with-tailwindcss

./: .gitignore  Cargo.toml  README.md  index.html
src/: main.rs  user.rs
