[package]
name = "yew-with-tailwindcss"
version = "0.1.0"
edition = "2021"
description = "A modern dashboard built with Yew, Tailwind CSS, and Rust"
readme = "README.md"
repository = "https://github.com/zhuima/yew-with-tailwindcss"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]



[dependencies]
yew = { version = "0.21", features = ["csr"] }
indexmap = "2.6.0"  # or whatever version is compatible with yew 0.21.0
implicit-clone = "0.5.0"
yew-router = "0.18.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen-futures = "0.4"
